update row_format title

--- a/MySQL/行格式/行格式.md
+++ b/MySQL/行格式/行格式.md
@@ -80,7 +80,7 @@ Create Table: CREATE TABLE `record_format_demo` (
 ) ENGINE=InnoDB DEFAULT CHARSET=ascii ROW_FORMAT=COMPACT
 ```
 
-# COMPACT
+# 2. COMPACT
 
 `COMPACT` 行格式由以下两个部分组成：
 
@@ -138,7 +138,7 @@ Create Table: CREATE TABLE `record_format_demo` (
 2. 如果用户没有定义主键，则选取一个不允许存储NULL值的UNIQUE键作为主键
 3. 如果以上两个都没有，InnoDB会默认添加一个名为 `row_id`的隐藏列作为主键
 
-# REDUNDANT
+# 3. REDUNDANT
 
 `REDUNDANT` 行格式是MySQL 5.0 之前就在使用的一种行格式。它由两部分组成：
 
@@ -173,11 +173,11 @@ Create Table: CREATE TABLE `record_format_demo` (
 - 当记录的真实数据占用的字节数**大于127**时，但**不大于32767**时，每个列对应的偏移量占用**2字节**。
 - 当记录的真实数据占用的字节数**大于32767**时，会将记录的一部分存放到溢出页中，在本页面值保留768字节和**20字节**的溢出页面地址。此时还是使用2字节存放偏移量。
 
-# 溢出页
+# 4. 溢出页
 
 COMPACT 和 REDUNDANT 行格式来说，只会存储768字节的数据到本吉拉的真实数据处，剩下的数据放到其他页中，用20个字节存储溢出页的地址。
 
-# DYNAMIC和COMPRESSED
+# 5. DYNAMIC和COMPRESSED
 
 `DYNAMIC` 与 `COMPACT` 相比，不同之处在于 `DYNAMIC`只在记录的真实数据处存储20字节地址指向溢出页。
 
