--- a/MySQL/行格式/行格式.md
+++ b/MySQL/行格式/行格式.md
@@ -173,6 +173,13 @@ Create Table: CREATE TABLE `record_format_demo` (
 - 当记录的真实数据占用的字节数**大于127**时，但**不大于32767**时，每个列对应的偏移量占用**2字节**。
 - 当记录的真实数据占用的字节数**大于32767**时，会将记录的一部分存放到溢出页中，在本页面值保留768字节和**20字节**的溢出页面地址。此时还是使用2字节存放偏移量。
 
+NULL值的偏移量怎么存储：将对应的偏移值得第一个比特位作为是否为NULL的依据。**如果是1，那么该列额值为NULL，否则就不为NULL**。
+
+- 如果存储的NULL值的字段是定长类型的，比如 `CHAR(M)` 数据类型，则NULL值也将占用记录的真实数据部分，并把字段对应的数据使用 `0x00` 填充。
+- 如果存储NULL值的字段是**变长数据类型**的，则不在记录的真实数据部分占用任何存储空间。
+
+在存储可变字符集 `CHAR(M)` 类型时，直接用**一个字符最多**需要的字节数存储一个字符。
+
 # 4. 溢出页
 
 COMPACT 和 REDUNDANT 行格式来说，只会存储768字节的数据到本吉拉的真实数据处，剩下的数据放到其他页中，用20个字节存储溢出页的地址。
